# primer

./: .gitignore  README.md  arch_sim.html  create_crawler_graph.py  login.html  test_browser.py
bot/: run_theater_sim.py  test_advanced_models.py  test_economy.py  test_external_dependencies.py  test_failover.py  test_geodistribution.py  test_mesh.py  test_mesh_resilience.py  (+3 more)
server/: .dockerignore  .env.example  docker-compose.yml  pyproject.toml  test_browser.py  test_dynamic_ws.py  test_ws.py
server/app/: main.py
server/app/auth/: dependencies.py  router.py
server/app/canvas/: models.py  repository.py  router.py  schemas.py
server/app/collaboration/: __init__.py  router.py
server/app/core/: config.py  database.py  exceptions.py  logging.py  middleware.py  nats.py  redis.py  security.py  storage.py
server/app/simulation/: cleanup_job.py  engine.py  export_worker.py  persistence.py  router.py  schemas.py  worker.py
server/app/simulation/models/: base.py  cdn.py  compute.py  dlq.py  external_service.py  firewall.py  queue.py  splitter.py
server/app/users/: models.py  repository.py  router.py  schemas.py
server/migrations/: env.py
server/migrations/versions/: 405c1eddfd7f_init_users.py  56d34d0896b1_add_simulation_history_tables.py  bd35b71dda2e_add_timestamps_to_design.py  c26edece2cb7_add_collaboration_and_notification_.py  c2a21d8aa654_implement_github_oauth_user_models.py  d277e32aad86_init_canvas.py  ded1bd5e3d4f_add_settings_jsonb_column_to_designs.py  f066b8f6ff5b_add_simulation_export_table.py
server/tests/simulation/: test_engine.py
(+95 files in other folders)
